--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,5 @@
-antlr4-python3-runtime==4.9.3
-audioread==3.0.1
-blinker==1.9.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cloudpickle==3.1.1
-decorator==5.2.1
-demucs==4.0.1
-dora_search==0.1.12
-einops==0.8.1
-filelock==3.17.0
-Flask==3.1.0
-flask-cors==5.0.1
-fsspec==2025.2.0
-idna==3.10
-importlib_metadata==8.6.1
-itsdangerous==2.2.0
-Jinja2==3.1.5
-joblib==1.4.2
-julius==0.2.7
-lameenc==1.8.1
-lazy_loader==0.4
-librosa==0.10.2.post1
-llvmlite==0.43.0
-MarkupSafe==3.0.2
-mido==1.3.3
-mpmath==1.3.0
-msgpack==1.1.0
-networkx==3.2.1
-numba==0.60.0
-numpy==2.0.2
-omegaconf==2.3.0
-openunmix==1.3.0
-packaging==24.2
-platformdirs==4.3.6
-pooch==1.8.2
-pycparser==2.22
-PyYAML==6.0.2
-requests==2.32.3
-retrying==1.3.4
-scikit-learn==1.6.1
-scipy==1.13.1
-six==1.17.0
-soundfile==0.13.1
-soxr==0.5.0.post1
-submitit==1.5.2
-sympy==1.13.1
-threadpoolctl==3.5.0
-torch==2.6.0
-torchaudio==2.6.0
-tqdm==4.67.1
-treetable==0.2.5
-typing_extensions==4.12.2
-urllib3==2.3.0
-Werkzeug==3.1.3
-zipp==3.21.0
+Flask
+librosa
+numpy
+soundfile
+demucs
